framec_tests/language_specific/c/v3_facade_smoke/negative/strict_malformed_stmt.frm
@target c

system S {
    machine:
        $A {
            e() {
                => $^
                int x = ; // malformed native statement
            }
        }
}

